--- a/style.css
+++ b/style.css
@@ -1,59 +1,98 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    
+}
+:root{
+    --pagina:#013a63;
+    --secundario:#2a6f97;
 }
 
-
-
-
-.header{
-background:#bae8e8;
-text-decoration: none;   
-width: 100%;
-height: 100px;
-color:rgb(97, 110, 110);
-font-family: 'Lucida Sans', 'Lucida Sans Regular', Verdana, sans-serif;
+.header {
+    background-image: linear-gradient(to left, #013a63 10%,#2a6f97 40%,#a9d6e5 74%, white 80%);
+    text-decoration: none;
+    width: 100%;
+    color: #a9d6e5;
+    font-family: "Lucida Sans", "Lucida Sans Regular", Verdana, sans-serif;
 }
-.logo{
+.logo {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-nav.lista{
-width: 50%;
+nav.lista {
+    width: 50%;
 }
 
 .lista ul {
-display: flex;
-justify-content: space-around;
-flex-direction:row;
-
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
 }
 
-.lista ul li{
+.lista ul li {
     list-style: none;
     display: inline-block;
     transition: all 0.4s linear;
     border-radius: 5px;
 }
 
-/* .lista {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center ;
-    padding: 0.5rem 1rem;
-    transition: all 0.4s linear;
-    border-radius: 5px;
-} */
-.lista ul li:hover{
-background: grey;
-   
+.lista ul li:hover {
+    background: grey;
 }
 
-img{
+.logo img {
     height: 104px;
-    width: 50%;
+    width: 40%;
+}
+.imagenjumbo {
+    background-image: url("/imagenes/jumbo.jpg");
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    background-image: linear-gradient(to left, rgba(255, 0, 0, 0), 50%, #e3f6f5, 200%, #e3f6f5),
+        url(/imagenes/jumbo.jpg);
+}
+
+.contenidojumbo h5 {
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-size: 20px;
+    background-color:#89c2d9;
+    color:var(--pagina);
+    margin-bottom: 70px;
+    margin-top: 170px;
+}
+
+.contenidojumbo h1 {
+    font-size: 70px;
+    color: #014f86;
+    margin-bottom: 20px;
+}
+.contenidojumbo p {
+    font-size: 20px;
+    color: #2a6f97;
+    margin-bottom: 30px;
+}
+.contenidojumbo {
+    padding: 30px;
+    width: 30%;
+}
+.contenidojumbo input{
+    padding:8px ;
+    width: 200px;
+    margin-right: 5px;
+    border-radius: 10px;
+    border-color: #468faf;
+    border-width: 3px;
+}
+.contenidojumbo button{
+    padding: 8px;
+    font-size: 14px;
+    background-color:whitesmoke;
+    color: #468faf ;
+    border-radius:10px ;
+    border-color: #468faf;
+    border-width: 3px;
 }
