--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav.lista {
     background-image: url("/imagenes/jumbo.jpg");
     width: 100vw;
     height: 100vh;
-    background-size: cover;
+    background-size: 100% 100%;
     background-image: linear-gradient(to left, rgba(255, 0, 0, 0), 50%, #e3f6f5, 200%, #e3f6f5),
         url(/imagenes/jumbo.jpg);
 }
@@ -95,4 +95,74 @@ nav.lista {
     border-radius:10px ;
     border-color: #468faf;
     border-width: 3px;
+}
+
+.seccatalogo{
+    width: 100vw;
+    height: 100vh;
+    background-size: 300px;
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.7)),
+        url(/imagenes/patron-dental.png);
+}
+.titulocatalogo{
+    text-align: center;
+    font-size: 25px;
+    color: #01497cc4;
+    padding: 50px;
+    font-family: fantasy;
+}
+.subtcatalogo{
+    text-align: center;
+    color: #01497cf6;
+    font-family:fantasy;
+    font-size: 50px;
+
+}
+
+.contenidocatalogo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 70px;
+    }
+.contenidocatalogo .imgcatalogo{
+    width: 330px;
+    height: 430px;
+    border-radius: 8px;
+    box-shadow: 2px 2px rgba(0, 0,0, .2);
+    overflow: hidden;
+    margin: 40px;
+    text-align: center;
+    background-color:#0e6db1e0;
+    color: white;
+
+}
+
+.contenidocatalogo .imgcatalogo:hover{
+    transform: translatey(-55px) ;
+    box-shadow: 5px 5px #2d4d64d3, 10px 10px #2a6f97, 15px 15px #468faf;
+}
+
+.contenidocatalogo .imgcatalogo img{
+    width: 330px;
+    height: 220px;
+}
+.contenidocatalogo .imgcatalogo h4{
+    font-weight: 600px;
+    padding: 20px;
+    font-size: 20px;
+
+}
+
+.contenidocatalogo .imgcatalogo p{
+    padding: 0 1rem;
+    font-size:16px;
+    font-weight: 300px;
+    padding: 15px;
+}
+
+.contenidocatalogo .imgcatalogo a{
+    font-weight: 500;
+    text-decoration: none;
+    color: skyblue;
 }
