--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
 }
-:root{
-    --pagina:#013a63;
-    --secundario:#2a6f97;
+:root {
+    --pagina: #013a63;
+    --secundario: #2a6f97;
 }
 
 .header {
-    background-image: linear-gradient(to left, #013a63 10%,#2a6f97 40%,#a9d6e5 74%, white 80%);
+    background-image: linear-gradient(to left, #013a63 10%, #2a6f97 40%, #a9d6e5 74%, white 80%);
     text-decoration: none;
     width: 100%;
     color: #a9d6e5;
@@ -59,8 +59,8 @@ nav.lista {
     padding: 10px 20px;
     border-radius: 20px;
     font-size: 20px;
-    background-color:#89c2d9;
-    color:var(--pagina);
+    background-color: #89c2d9;
+    color: var(--pagina);
     margin-bottom: 70px;
     margin-top: 170px;
 }
@@ -79,90 +79,145 @@ nav.lista {
     padding: 30px;
     width: 30%;
 }
-.contenidojumbo input{
-    padding:8px ;
+.contenidojumbo input {
+    padding: 8px;
     width: 200px;
     margin-right: 5px;
     border-radius: 10px;
     border-color: #468faf;
     border-width: 3px;
 }
-.contenidojumbo button{
+.contenidojumbo button {
     padding: 8px;
     font-size: 14px;
-    background-color:whitesmoke;
-    color: #468faf ;
-    border-radius:10px ;
+    background-color: whitesmoke;
+    color: #468faf;
+    border-radius: 10px;
     border-color: #468faf;
     border-width: 3px;
 }
 
-.seccatalogo{
+.seccatalogo {
     width: 100vw;
-    height: 100vh;
     background-size: 300px;
-    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.7)),
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),
         url(/imagenes/patron-dental.png);
 }
-.titulocatalogo{
+.titulocatalogo {
     text-align: center;
     font-size: 25px;
     color: #01497cc4;
     padding: 50px;
     font-family: fantasy;
 }
-.subtcatalogo{
+.subtcatalogo {
     text-align: center;
     color: #01497cf6;
-    font-family:fantasy;
+    font-family: fantasy;
     font-size: 50px;
-
 }
 
-.contenidocatalogo{
+.contenidocatalogo {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding: 70px;
-    }
-.contenidocatalogo .imgcatalogo{
+}
+.contenidocatalogo .imgcatalogo {
     width: 330px;
     height: 430px;
     border-radius: 8px;
-    box-shadow: 2px 2px rgba(0, 0,0, .2);
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     margin: 40px;
     text-align: center;
-    background-color:#0e6db1e0;
+    background-color: #0e6db1e0;
     color: white;
-
 }
 
-.contenidocatalogo .imgcatalogo:hover{
-    transform: translatey(-55px) ;
-    box-shadow: 5px 5px #2d4d64d3, 10px 10px #2a6f97, 15px 15px #468faf;
+.contenidocatalogo .imgcatalogo:hover {
+    transform: translatey(-55px);
+    box-shadow: 5px 5px #468faf, 10px 10px #2a6f97, 15px 15px #468faf;
 }
 
-.contenidocatalogo .imgcatalogo img{
+.contenidocatalogo .imgcatalogo img {
     width: 330px;
     height: 220px;
 }
-.contenidocatalogo .imgcatalogo h4{
+.contenidocatalogo .imgcatalogo h4 {
     font-weight: 600px;
     padding: 20px;
     font-size: 20px;
-
 }
 
-.contenidocatalogo .imgcatalogo p{
+.contenidocatalogo .imgcatalogo p {
     padding: 0 1rem;
-    font-size:16px;
+    font-size: 16px;
     font-weight: 300px;
     padding: 15px;
 }
 
-.contenidocatalogo .imgcatalogo a{
+.contenidocatalogo .imgcatalogo a {
     font-weight: 500;
     text-decoration: none;
     color: skyblue;
+}
+.adicionales {
+    display: flex;
+    /* background-color: #0e6db1c9; */
+    background-image: radial-gradient( circle farthest-corner at 10% 20%, #013a63 0.1%, #0e6db1e0 99.8% );
+    /* background-image: linear-gradient( 65.9deg,  #2a6f97 5.5%, #0e6db1c9 54.2%, rgba(64,198,238,1) 55.2%, #0e6db1c9 98.4% ); */
+    /* background: linear-gradient(to right, #013a63, #0e6db1e0); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+.adicionales div{
+    width: 50%;
+}
+.adic1 {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    left: 80px;
+    top: -400px;
+    border-radius: 5px;
+}
+
+.adic2 {
+    width: 500px;
+    height: 500px;
+    margin-left: 220px;
+    margin-top: 120px;
+    border-radius: 5px;
+   
+}
+.textocat{
+    color: whitesmoke;
+    display:flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content:center;
+    gap: 90px;
+    padding: 10px;
+    
+}
+.textocat button{
+    padding: 12px;
+    width: 300px;
+    margin-right: 20px;
+    border-radius: 10px;
+    border-color: #52a89a;
+    border-width: 3px;
+    background-color: #52a89a;    
+    color: whitesmoke;
+    font-size: 18px;
+}
+.textocat h1{
+    font-size: 50px;
+}
+.textocat img{
+    width:18px;
+    position: relative;
+    top: 4px;
+    left: 20px;
+
 }
