arregle url en css

--- a/style.css
+++ b/style.css
@@ -48,12 +48,12 @@ nav.lista {
 }
 
 .imagenjumbo {
-    background-image: url("/imagenes/jumbo.jpg");
+    background-image: url(imagenes/jumbo.jpg);
     width: 100vw;
     height: 100vh;
     background-size: 100% 100%;
     background-image: linear-gradient(to left, rgba(255, 0, 0, 0), 50%, #e3f6f5, 200%, #e3f6f5),
-        url(/imagenes/jumbo.jpg);
+        url(imagenes/jumbo.jpg);
 }
 
 .contenidojumbo h5 {
@@ -103,7 +103,7 @@ nav.lista {
     width: 100vw;
     background-size: 300px;
     background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),
-        url(/imagenes/patron-dental.png);
+        url(imagenes/patron-dental.png);
 }
 .titulocatalogo {
     text-align: center;
