--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
 }
-
+button {
+    cursor: pointer;
+}
 .header {
     background-image: linear-gradient(to left, #013a63 10%, #2a6f97 40%, #a9d6e5 74%, white 80%);
     text-decoration: none;
@@ -17,7 +19,9 @@
     align-items: center;
 }
 
-.logo a {
+.logo input,
+.logo label,
+.logo .menu-desplegable {
     display: none;
 }
 
@@ -37,6 +41,10 @@ nav.lista {
     transition: all 0.4s linear;
     border-radius: 5px;
 }
+.lista ul li a {
+    text-decoration: none;
+    color: #a9d6e5;
+}
 
 .lista ul li:hover {
     background: grey;
@@ -52,8 +60,7 @@ nav.lista {
     width: 100vw;
     height: 100vh;
     background-size: 100% 100%;
-    background-image: linear-gradient(to left, rgba(255, 0, 0, 0), 50%, #e3f6f5, 200%, #e3f6f5),
-        url(imagenes/jumbo.jpg);
+    background-image: linear-gradient(to left, rgba(255, 0, 0, 0), 50%, #e3f6f5, 200%, #e3f6f5), url(imagenes/jumbo.jpg);
 }
 
 .contenidojumbo h5 {
@@ -126,6 +133,7 @@ nav.lista {
     padding: 70px;
 }
 .contenidocatalogo .imgcatalogo {
+    cursor: pointer;
     width: 330px;
     height: 430px;
     border-radius: 8px;
@@ -232,6 +240,7 @@ nav.lista {
     flex-direction: column;
     align-items: center;
     gap: 15px;
+    cursor: pointer;
 }
 
 .footerparte2 {
@@ -270,6 +279,7 @@ nav.lista {
     gap: 25px;
     margin-top: 30px;
     margin-bottom: 30px;
+    cursor: pointer;
 }
 
 @media (max-width: 1024px) {
@@ -278,31 +288,27 @@ nav.lista {
     }
     .contenidojumbo h5 {
         margin-top: 70px;
-
     }
     .contenidojumbo {
         width: 80vw;
         margin-left: 10%;
     }
-    .adicionales{
+    .adicionales {
         flex-direction: column;
-
     }
-    .adicionales div{
-        width:100%;
+    .adicionales div {
+        width: 100%;
         height: 600px;
     }
-    .textocat{
-        align-items:center;
+    .textocat {
+        align-items: center;
         padding: 0px;
         text-align: center;
     }
-    .textocat h3{
+    .textocat h3 {
         font-size: 22px;
         width: 90%;
-        
     }
-
 }
 
 @media (max-width: 500px) {
@@ -312,58 +318,103 @@ nav.lista {
     .header {
         background-image: none;
     }
-    .header nav {
+    .header .lista {
         display: none;
     }
     .logo {
         display: flex;
         justify-content: space-evenly;
+        flex-wrap: wrap;
     }
     .logo img {
         width: 80%;
     }
-    .logo a {
+    .logo label {
         display: initial;
     }
-    .logo a img {
+    .logo label img {
         height: 50px;
         width: 50px;
     }
-    .contenidojumbo{
+
+    .contenidojumbo {
         width: 90vw;
         margin-left: 1%;
     }
-    .contenidojumbo h1{
+    .contenidojumbo h1 {
         font-size: 50px;
     }
-    .contenidojumbo h5{
+    .contenidojumbo h5 {
         font-size: 15px;
     }
-    .contenidojumbo p{
+    .contenidojumbo p {
         color: #01497c;
     }
-    .adic2{
+    .adic2 {
         width: 80%;
         margin-left: 10%;
     }
-    .adic1{
-        top:-600px;
+    .adic1 {
+        top: -600px;
     }
-    .textocat h1{
+    .textocat h1 {
         margin-top: 40px;
     }
 
-    .textocat{
+    .textocat {
         gap: 60px;
     }
-    .footerparte1{
+    .footerparte1 {
         flex-direction: column;
         gap: 10px;
     }
-    .footerparte2{
+    .footerparte2 {
         flex-direction: column;
         text-align: center;
-        gap:5px;
+        gap: 5px;
     }
 
+    input[type="checkbox"] {
+        display: none;
+    }
+
+    .label-menu-movil {
+        padding: 1rem;
+        cursor: pointer;
+        transition: all 0.25s ease-out;
+        display: initial;
+    }
+
+    .menu-desplegable {
+        display: initial;
+        align-self: flex-end;
+        max-height: 0px;
+        overflow: hidden;
+        transition: max-height 0.25s ease-in-out;
+    }
+
+    .menu-movil:checked + .label-menu-movil + .menu-desplegable {
+        max-height: 1000px;
+        display: flex;
+        flex-flow: row wrap;
+    }
+    .menu-desplegable .contenido {
+        padding: 0.5rem 1rem;
+        align-self: flex-end;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 50vh;
+        width: 50vw;
+    }
+    .menu-desplegable .contenido > li {
+        border-bottom: 1px solid rgba(0, 105, 255, 0.45);
+        width: 100%;
+    }
+    .menu-desplegable .contenido a {
+        color: black;
+        text-decoration: none;
+        font-size: 20px;
+    }
 }
